# pathTracer

./: 4,20.txt  48  CMakeLists.txt  README.md  glad.c  local_history.patch  main.cpp  search.glsl
Tests/: ObjTestScene.h
assets/: slum_house.gltf
fshaders/: fshader.fsh  fshader_old.fsh  pass3.fsh
includes/: BVHNode.h  EnvironmentMap.h  Material.h  MathUtils.h  RenderPass.cpp  RenderPass.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  bbox.cpp  bbox.h  bvh.h  bvh_translator.cpp  bvh_translator.h  split_bvh.cpp  split_bvh.h
includes/Loader/: Loader.h
includes/Math/: Mat4.h  MathUtils.h
includes/glad/: glad.h
includes/tinygltf/: bvh.cpp
